Expanded the SubSortingTree to allow merges